Fix layout on mobile devise.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -294,6 +294,7 @@ header {
     .issue-button {
       margin-top: 40px;
       display: inline-block;
+      float: right;
       ul {
         li {
           display: inline-block;
@@ -386,7 +387,6 @@ header {
     .title {
       margin-top: 30px;
       h3 {
-        margin-bottom: 0;
         span {
           color: $blue;
           font-size: 0.6em;
@@ -399,6 +399,8 @@ header {
         border: 2px solid $blue;
         color: $blue;
         font-weight: 500;
+        position: relative;
+        top: -5px;
       }
       .btn:hover {
         background: $light-blue;
@@ -674,6 +676,74 @@ footer {
       }
     }
 
+  }
+
+}
+@media screen and (max-width: 500px) {
+  .content {
+    #top-issue {
+      .issue-image {
+        width: 270px;
+        height: 270px;
+      }
+      .issue-button {
+        position: relative;
+        text-align: center;
+        float: none;
+        margin: 0 auto;
+        ul {
+          padding-left: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  body {
+    font-size: 0.96em;
+  }
+  header {
+    .search {
+      margin-top: 15px;
+    }
+    .nav-bar {
+      ul {
+        li {
+          padding: 5px;
+        }
+      }
+    }
+  }
+  .content {
+    #hot-issues {
+      height: 720px;
+      .issue-info {
+        .content {
+          .top {
+            height: 320px;
+            .issue-image {
+              width: 150px;
+              height: 150px;
+            }
+          }
+          .bottom {
+            .agent-photo {
+              width: 50px;
+              height: 50px;
+              margin: 5px 0;
+            }
+          }
+        }
+      }
+    }
+  }
+  .bottom-banner {
+    .text {
+      h2 {
+        font-size: 2.4em;
+      }
+    }
   }
 
 }
